  * New functionnality to wrapper starpu_insert_task to pass a array of
	data_handles via the parameter STARPU_DATA_ARRAY
  * Enable GPU-GPU direct transfers.

Changes:
  * The FxT code can now be used on systems other than Linux.
  * Keep only one hashtable implementation common/uthash.h
  * Add tag dependency in trace-generated DAG.
  * Fix CPU binding for optimized CPU-GPU transfers.

Small changes:
  * STARPU_NCPU should now be used instead of STARPU_NCPUS. STARPU_NCPUS is
	still available for compatibility reasons.

StarPU 1.0.1 (svn revision 6659)
==============================================

Changes:
  * hwloc support. Warn users when hwloc is not found on the system and
	produce error when not explicitely disabled.
  * Several bug fixes
  * GCC plug-in
	- Add `#pragma starpu release'
	- Fix bug when using `acquire' pragma with function parameters
	- Slightly improve test suite coverage
	- Relax the GCC version check
  * Update SOCL to use new API
  * Documentation improvement.

StarPU 1.0.0 (svn revision 6306)
==============================================
The extensions-again release

New features:
  * Add SOCL, an OpenCL interface on top of StarPU.
  * Add a gcc plugin to extend the C interface with pragmas which allows to
	easily define codelets and issue tasks.
  * Add reduction mode to starpu_mpi_insert_task.
  * A new multi-format interface permits to use different binary formats
	on CPUs & GPUs, the conversion functions being provided by the
	application and called by StarPU as needed (and as less as
	possible).
  * Deprecate cost_model, and introduce cost_function, which is provided
	with the whole task structure, the target arch and implementation
	number.
  * Permit the application to provide its own size base for performance
	models.
  * Applications can provide several implementations of a codelet for the
	same architecture.
  * Add a StarPU-Top feedback and steering interface.