@@ -28,10 +28,8 @@
 //#define STARPU_MPI_VERBOSE 1
 #include <starpu_mpi_private.h>
 
-/* Whether we are allowed to keep copies of remote data. Does not work
- * yet: the sender has to know whether the receiver has it, keeping it
- * in an array indexed by node numbers. */
-//#define MPI_CACHE 1
+/* Whether we are allowed to keep copies of remote data. */
+#define MPI_CACHE 1
 
 #ifdef MPI_CACHE
 struct _starpu_data_entry
